entrega_final/config/iptables-gateway.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Feb 19 00:00:19 2026
*filter
:INPUT DROP [3:228]
:FORWARD DROP [2136:137940]
:OUTPUT DROP [392:26825]
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A FORWARD -s 172.2.10.2/32 -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -s 172.2.10.2/32 -p tcp -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -d 172.2.10.5/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A OUTPUT -d 172.2.10.5/32 -p tcp -m tcp --dport 3128 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m tcp --sport 22 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 80 -j REJECT --reject-with icmp-port-unreachable
-A OUTPUT -p tcp -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Thu Feb 19 00:00:19 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Thu Feb 19 00:00:19 2026
*nat
:PREROUTING ACCEPT [2177:140416]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [26:1868]
-A POSTROUTING -s 172.1.10.0/24 -o eth1 -j MASQUERADE
-A POSTROUTING -s 172.2.10.0/24 -o eth1 -j MASQUERADE
COMMIT
# Completed on Thu Feb 19 00:00:19 2026
